--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,11 @@
             android:launchMode="singleTask"
             android:windowSoftInputMode="stateUnchanged|adjustResize" />
 
+        <activity
+            android:name=".ui.act.AppActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnchanged|adjustResize" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="cn.innovativest.entertainment.fileprovider"
