--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateUnchanged|adjustResize" />
 
+        <activity
+            android:name=".ui.act.AboutActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnchanged|adjustResize" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="cn.innovativest.entertainment.fileprovider"
